# pixel-proc

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/eu/sisik/pixelproc/: HistogramTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: log.h  native-lib.cpp
app/src/main/java/eu/sisik/pixelproc/: MainActivity.kt
app/src/main/java/eu/sisik/pixelproc/histo/: Histogram.kt  HistogramView.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/rs/: histo.rs
app/src/test/java/eu/sisik/pixelproc/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
